# claudeengine

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  README.md  WRECKONING.md
src/: CLAUDE.md  CMakeLists.txt
src/abstract/: AudioFormat.h  BlendFactor.h  BufferUsage.h  CMakeLists.txt  CompareFunc.h  ConstantBuffer.h  CullFace.h  Devices.h  Face.h  GeometryBuffer.h  GpuProfileScope.h  ISoundBuffer.h  ISoundSource.h  ISoundSystem.h  IndexBuffer.h  IndexType.h  PrimitiveType.h  RawTexture.h  RenderTarget.h  RenderTargetCube.h  RenderTargetGroup.h  Shader.h  ShaderStorageBuffer.h  StencilOp.h  Texture.h  TextureFormat.h  VertexBuffer.h  VideoDevice.h
src/app/: CMakeLists.txt  main.cpp
src/audio/: AudioDecoderUtils.cpp  AudioDecoderUtils.h  CLAUDE.md  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  RolloffType.h  Sound.cpp  Sound.h  SoundDesc.h  SoundManager.cpp  SoundManager.h  SoundSystemFactory.cpp  SoundSystemFactory.h  VirtualSoundInstance.cpp  VirtualSoundInstance.h
src/core/: AppConfig.cpp  AppConfig.h  BBox3.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Config.cpp  Config.h  CoordinateSystem.h  Event.h  EventManager.h  EventType.h  GpuProfiler.cpp  GpuProfiler.h  GpuTimeSample.h  Key.h  Logger.cpp  Logger.h  Mat2f.h  Mat3f.h  Mat4f.h  MathUtils.cpp  MathUtils.h  MouseButton.h  PhysicsConfig.cpp  PhysicsConfig.h  Plane.cpp  Plane.h  PlayerConfig.cpp  PlayerConfig.h  PostProcessConfig.cpp  PostProcessConfig.h  Profiler.cpp  Profiler.h  ProjectionType.h  RayUtils.cpp  RayUtils.h  Rect.h  Resource.h  (+19 more)
src/editor/: CLAUDE.md  CMakeLists.txt  EditorCameraController.cpp  EditorCameraController.h  EditorCommand.h  EditorCommandHistory.cpp  EditorCommandHistory.h  EditorScene.cpp  EditorScene.h  EditorSystem.cpp  EditorSystem.h  EditorTheme.cpp  EditorTheme.h  EditorTool.h  EditorToolbar.cpp  EditorToolbar.h  EditorUtils.h  EditorViewport.cpp  EditorViewport.h  EditorWindow.cpp  EditorWindow.h  EmeshInfoPanel.cpp  EmeshInfoPanel.h  EnvironmentEditorPanel.cpp  EnvironmentEditorPanel.h  GaugeGizmos.cpp  GaugeGizmos.h  IResourcePanel.h  ImportedMaterialDesc.h  LightWireframeRenderer.cpp  LightWireframeRenderer.h  LogPanel.cpp  LogPanel.h  MapPropertiesWindow.cpp  MapPropertiesWindow.h  MapSerializer.cpp  MapSerializer.h  MaterialEditorWindow.cpp  MaterialEditorWindow.h  MaterialSelectionModal.cpp  (+64 more)
src/editor_app/: CMakeLists.txt  main.cpp
src/environment/: CLAUDE.md  CMakeLists.txt  CloudRenderer.cpp  CloudRenderer.h  CloudShadowRenderer.cpp  CloudShadowRenderer.h  EnvironmentDesc.h  SkyInfos.h  SkyRenderer.cpp  SkyRenderer.h  TreeLayer.cpp  TreeLayer.h  WaterInfos.h  WaterRenderer.cpp  WaterRenderer.h  WindInfos.h  WindSystem.cpp  WindSystem.h  WorldTime.cpp  WorldTime.h
src/game/: CLAUDE.md  CMakeLists.txt  ChaseCameraController.cpp  ChaseCameraController.h  EnvironmentLighting.h  FPSCameraController.cpp  FPSCameraController.h  GameCamera.cpp  GameCamera.h  GameGauge.cpp  GameGauge.h  GameLight.cpp  GameLight.h  GameLightDesc.h  GameMaterial.cpp  GameMaterial.h  GameMesh.cpp  GameMesh.h  GameObject.cpp  GameObject.h  GameObjectType.h  GameObjectVisitor.h  GameParticleSystem.cpp  GameParticleSystem.h  GamePivot.cpp  GamePivot.h  GamePlayerStart.cpp  GamePlayerStart.h  GameRoad.cpp  GameRoad.h  GameSoundEmitter.cpp  GameSoundEmitter.h  GameSystem.cpp  GameSystem.h  GameTerrain.cpp  GameTerrain.h  GameVehicle.cpp  GameVehicle.h  ICameraController.h  IVehicleController.h  (+11 more)
src/gldevices/: CMakeLists.txt  GLAtlasTexture.cpp  GLAtlasTexture.h  GLConstantBuffer.cpp  GLConstantBuffer.h  GLDevices.cpp  GLDevices.h  GLGeometryBuffer.cpp  GLGeometryBuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLNormalMapTexture.cpp  GLNormalMapTexture.h  GLRawTexture.cpp  GLRawTexture.h  GLRenderTarget.cpp  GLRenderTarget.h  GLRenderTargetCube.cpp  GLRenderTargetCube.h  GLRenderTargetGroup.cpp  GLRenderTargetGroup.h  GLShader.cpp  GLShader.h  GLShaderStorageBuffer.cpp  GLShaderStorageBuffer.h  GLTexture.cpp  GLTexture.h  GLTileableTexture.cpp  GLTileableTexture.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVideoDevice.cpp  GLVideoDevice.h  stb_image_impl.cpp
src/mesh/: CMakeLists.txt  EmeshReader.cpp  EmeshReader.h  EmeshWriter.cpp  EmeshWriter.h  FbxImporter.cpp  FbxImporter.h  IMeshImporter.h  LodData.h  MeshData.h  MeshUtils.cpp  MeshUtils.h  ObjImporter.cpp  ObjImporter.h  SubMeshRange.h  SubmeshData.h
src/openal/: ALSoundBuffer.cpp  ALSoundBuffer.h  ALSoundSource.cpp  ALSoundSource.h  ALSoundSystem.cpp  ALSoundSystem.h  CMakeLists.txt
src/particles/: CLAUDE.md  CMakeLists.txt  ColorStop.h  EmbeddedLightDesc.h  EmitterShape.h  ParticleAnimationMode.h  ParticleBlendMode.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSubSystemDesc.h  ParticleSystemTemplate.cpp  ParticleSystemTemplate.h
src/physics/: CLAUDE.md  CMakeLists.txt  CharacterController.cpp  CharacterController.h  CollisionLayer.h  IPhysicsBodyListener.h  JoltDebugRenderer.cpp  JoltDebugRenderer.h  MotionType.h  Physics.cpp  PhysicsBody.cpp  PhysicsBody.h  PhysicsBodyDesc.h  PhysicsMaterialDesc.h  PhysicsShapeCache.cpp  PhysicsShapeCache.h  PhysicsShapeDesc.h  PhysicsShapeType.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsVehicle.cpp  PhysicsVehicle.h  RaycastResult.h  SurfaceMaterial.h  VehicleDesc.h
src/renderer/: BloomRenderer.cpp  BloomRenderer.h  CMakeLists.txt  CSMInfos.h  CircleSpotLight.cpp  CircleSpotLight.h  EmissiveFBO.cpp  EmissiveFBO.h  EyeAdaptationRenderer.cpp  EyeAdaptationRenderer.h  FoliageRenderer.cpp  FoliageRenderer.h  GBuffer.cpp  GBuffer.h  GeometryData.cpp  GeometryData.h  GeometryUtils.cpp  GeometryUtils.h  GlobalLight.cpp  GlobalLight.h  IVisibilitySystem.h  Light.cpp  Light.h  LightInfos.h  LightRenderer.cpp  LightRenderer.h  Material.cpp  Material.h  MaterialDesc.h  MaterialInfos.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  MeshLoader.cpp  MeshLoader.h  MeshRenderer.cpp  MeshRenderer.h  NoCullingVisibilitySystem.cpp  NoCullingVisibilitySystem.h  (+38 more)
src/terrain/: CDLODQuadTree.cpp  CDLODQuadTree.h  CLAUDE.md  (+18 more)
(+809 files in other folders)
