add_subdirectory(core)
add_subdirectory(abstract)
add_subdirectory(mesh)
add_subdirectory(terrain)
add_subdirectory(environment)
add_subdirectory(gldevices)
add_subdirectory(renderer)
add_subdirectory(game)
if(BUILD_EDITOR)
    add_subdirectory(editor)
    add_subdirectory(editor_app)
endif()
add_subdirectory(app)
